Gamesteps for 2 winner and A1
Completed the game step implementations for the 2 winner game and the a1 scenario